# GraphicsEngine2025

./: .gitignore  CMakeLists.txt
shaders/: simple_shader.frag  simple_shader.vert
src/: first_app.cpp  first_app.h  game_camera.cpp  game_camera.h  game_device.cpp  game_device.h  game_model.cpp  game_model.h  game_object.cpp  game_object.h  game_pipeline.cpp  game_pipeline.h  game_renderer.cpp  game_renderer.h  game_swap_chain.cpp  game_swap_chain.h  game_window.cpp  game_window.h  main.cpp  simple_render_system.cpp  simple_render_system.h
